adding for exam project to repo

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 /Modul5/build/
+/UTS/nbproject/private/
+/UTS/build/
+/UTSOOP/nbproject/private/
+/UTSOOP/build/
+/LatihanUtsOOP/nbproject/private/
+/LatihanUtsOOP/build/
